Retoques finales antes de presentar.

--- a/src/main/resources/templates/admin/form-titulo.html
+++ b/src/main/resources/templates/admin/form-titulo.html
@@ -168,7 +168,7 @@
         <hr>
 
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a th:href="@{/admin/titulo/}" class="btn btn-default">Cancelar</a>
+        <a th:href="@{/}" class="btn btn-default">Cancelar</a>
 
       </form>
 
