--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,6 +6,7 @@
 body {
     margin-top: 20px;
     padding-top: 100px;
+    background-color: #d3d3d3;
 }
 
 
@@ -125,7 +126,7 @@ body {
     margin-top: 30px;
 
     /* ✅ FIX solapes: NO max-height fijo */
-    min-height: 490px;
+    min-height: 600px;
     height: auto;
     overflow: hidden;
 }
