--- a/src/main/resources/templates/admin/form-genero.html
+++ b/src/main/resources/templates/admin/form-genero.html
@@ -82,7 +82,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a th:href="@{/admin/genero/}" class="btn btn-default">Cancelar</a>
+        <a th:href="@{/}" class="btn btn-default">Cancelar</a>
       </form>
 
     </div>
