--- a/src/main/resources/templates/admin/form-plataforma.html
+++ b/src/main/resources/templates/admin/form-plataforma.html
@@ -120,7 +120,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a th:href="@{/admin/plataforma/}" class="btn btn-default">Cancelar</a>
+        <a th:href="@{/}" class="btn btn-default">Cancelar</a>
       </form>
 
     </div>
