--- a/src/main/resources/templates/busqueda.html
+++ b/src/main/resources/templates/busqueda.html
@@ -141,7 +141,7 @@
     <div class="col-xs-12 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
       <!-- Espacio extra en móvil -->
-      <div class="visible-xs" style="height:15px;"></div>
+      <div class="visible-xs" style="height:30px;"></div>
 
 
 
@@ -150,7 +150,9 @@
           Resultados encontrados:
           "<span th:text="${titulos.size}">0</span>"
         </h1>
+      </div>
 
+      <div>
         <a th:href="@{/admin/titulo/nuevo}"
            class="btn btn-primary"
            title="Añadir nuevo título">
@@ -164,7 +166,7 @@
         <a th:href="@{/admin/region/nueva}"
            class="btn btn-primary"
            title="Añadir nueva region">
-          <span class="glyphicon glyphicon-plus"></span> Nueva region
+                    <span class="glyphicon glyphicon-plus"></span> Nueva region
         </a>
       </div>
 
